# crypto-primitives

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: .markdownlint.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  linkify_changelog.yml  mdlinter.yml
benches/: crh.rs  merkle_tree.rs  signature.rs  utils.rs
cp-benches/: Cargo.toml
cp-benches/benches/crypto_primitives/: comm.rs  crh.rs  prf.rs  signature.rs
crypto-primitives/: Cargo.toml
crypto-primitives/benches/: merkle_tree.rs
crypto-primitives/src/: lib.rs  macros.rs
crypto-primitives/src/commitment/: constraints.rs  mod.rs
crypto-primitives/src/commitment/blake2s/: constraints.rs  mod.rs
crypto-primitives/src/commitment/injective_map/: constraints.rs  mod.rs
crypto-primitives/src/commitment/pedersen/: constraints.rs  mod.rs
crypto-primitives/src/crh/: constraints.rs  mod.rs
crypto-primitives/src/crh/bowe_hopwood/: constraints.rs  mod.rs
crypto-primitives/src/crh/injective_map/: constraints.rs  mod.rs
crypto-primitives/src/crh/pedersen/: constraints.rs  mod.rs
crypto-primitives/src/crh/poseidon/: constraints.rs  mod.rs
crypto-primitives/src/crh/sha256/: constraints.rs  mod.rs
crypto-primitives/src/encryption/: constraints.rs  mod.rs
crypto-primitives/src/encryption/elgamal/: constraints.rs  mod.rs
crypto-primitives/src/merkle_tree/: constraints.rs  mod.rs
crypto-primitives/src/merkle_tree/tests/: constraints.rs  mod.rs  test_utils.rs
crypto-primitives/src/prf/: constraints.rs  mod.rs
crypto-primitives/src/prf/blake2s/: constraints.rs  mod.rs
crypto-primitives/src/signature/: constraints.rs  mod.rs
crypto-primitives/src/signature/schnorr/: constraints.rs  mod.rs
crypto-primitives/src/snark/: constraints.rs
crypto-primitives/src/sponge/: absorb.rs  mod.rs
crypto-primitives/src/sponge/constraints/: absorb.rs  mod.rs
crypto-primitives/src/sponge/merlin/: mod.rs
crypto-primitives/src/sponge/poseidon/: constraints.rs  grain_lfsr.rs  mod.rs  tests.rs  traits.rs
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: linkify_changelog.py
src/: lib.rs  macros.rs
src/commitment/: constraints.rs  mod.rs
src/commitment/blake2s/: constraints.rs  mod.rs
src/commitment/injective_map/: constraints.rs  mod.rs
src/commitment/pedersen/: constraints.rs  mod.rs
src/crh/: constraints.rs  mod.rs
src/crh/bowe_hopwood/: constraints.rs  mod.rs
src/crh/identity/: constraints.rs  mod.rs
src/crh/injective_map/: constraints.rs  mod.rs
src/crh/pedersen/: constraints.rs  mod.rs
src/crh/poseidon/: constraints.rs  mod.rs
src/crh/poseidon/sbox/: constraints.rs  mod.rs
src/crh/poseidon/test_data/: mod.rs  result_x5_254_3.rs  result_x5_254_5.rs  x5_254_3.rs  x5_254_5.rs
src/crh/sha256/: constraints.rs  mod.rs  r1cs_utils.rs
src/crh/sha384/: constraints.rs  mod.rs
src/crh/sha512/: constraints.rs  mod.rs  r1cs_utils.rs
src/crh/wrapper/: constraints.rs  mod.rs
src/cryptographic_hash/: mod.rs  poseidon.rs
src/cryptographic_hash/constraints/: mod.rs  poseidon.rs
src/encryption/: constraints.rs  mod.rs
src/encryption/elgamal/: constraints.rs  mod.rs
src/merkle_tree/: constraints.rs  incremental_merkle_tree.rs  mod.rs
src/merkle_tree/tests/: constraints.rs  mod.rs  test_utils.rs
src/merkle_tree_old/: constraints.rs  mod.rs
src/nizk/: constraints.rs  mod.rs
src/nizk/gm17/: constraints.rs  mod.rs
src/nizk/groth16/: constraints.rs  mod.rs
src/pow/: mod.rs  poseidon.rs
src/pow/constraints/: mod.rs  poseidon.rs
src/prf/: constraints.rs  mod.rs
src/prf/blake2s/: constraints.rs  mod.rs
src/signature/: constraints.rs  mod.rs
src/signature/schnorr/: constraints.rs  mod.rs
src/snark/: constraints.rs  mod.rs
src/sponge/: absorb.rs  mod.rs  test.rs
src/sponge/constraints/: absorb.rs  mod.rs
src/sponge/merlin/: mod.rs
src/sponge/poseidon/: constraints.rs  grain_lfsr.rs  mod.rs  tests.rs  traits.rs
