[package]
name = "ark-crypto-primitives-macros"
version = "0.4.0"
edition = "2021"

[dependencies]
quote = { version = "1.0" }
syn = { version = "2.0" }
ark-crypto-primitives = { version = "0.4.0", path = "../crypto-primitives", default-features = false, features = ["sponge"]}

[lib]
proc-macro = true
