[package]
name = "ark-crypto-primitives-macros"
description.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
quote = { version = "1.0" }
syn = { version = "2.0" }
proc-macro2 = { version = "1.0" }

[lib]
proc-macro = true
